k8s/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: turbo-demo-service
spec:
  selector:
    app: turbo-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
