k8s/web/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: turbo-demo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`turbo.rajubk.com`)
      kind: Rule
      services:
        - name: turbo-demo-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: test-rajubk-com-tls
